Fixes to spacing
Fixes to spacing

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ h1 {
 	font-family: "Roboto", sans-serif;
 	font-weight: 700;
 	font-style: normal;
-	font-size: 29pt;
+	font-size: 25pt;
 	text-align: center;
 	max-width: 90%;
 }
@@ -257,6 +257,7 @@ h1 {
 
 .flex-h1 {
 	padding: 50px 0 15px 0;
+	font-size: 28pt;
 }
 
 .project-desc {
